--- a/concl.tex
+++ b/concl.tex
@@ -1,4 +1,52 @@
-\chapter{Conclusion}
+\chapter{Where To?}
+
+5. Where to?
+-new epistemology?
+-orienting toward the right questions?
+-???
+
+Impacts / New Epistemologies (21 p)
+
+>>>This is where I weave in automotive history 
+>>>Return to streetcar and the re-shaping of public space: 
+
+1) process by which new technologies become entwined with new legal
+principles; new epistemologies?
+-historical example (3 p)
+-what is the new epistemology needed to make sense of devices like
+this in the everyday (because we haven't seen them outside of extreme
+environments, except in very weak forms)
+-the street stands to be re-shaped again, subtly, by the capabilities
+of our vehicles (1 p)
+-this is the place to bring together the AI, Human Factors,
+Law/Policy, and STS/Anthro background (specifically on technology \&
+people, edges of HCI, Andy Clark on natural-born cyborgs) to paint the
+whole picture of the forces in play (2 p, v. philosophical)
+
+2) VERY different potential impacts if we are looking at fully
+autonomous vs. partially autonomous 
+--in terms of human role and our understanding of our own role
+----referring back to HF/SC (3 p)
+--in terms of how the road itself may have to change (not going to
+spend a lot of time on this, but it is worth at least a couple
+paragraphs) (2 p)
+--in terms of legal framework
+----it is important to note that ``responsibility'' is not binary
+(which is made clear in these examples), and torts may be distributed
+across human and nonhuman actors (operator, owner, seller,
+manufacturer, distributors) but distribution of torts has an ethical
+and ideological stance (2 p)
+>>>>BUT: problems with the liability framework: expensive for the
+litigant to get expert witnesses; harder to determine whose fault it
+is and the human tends to get scapegoated (see industrial accidents,
+TMI, or oil rig disasters) (3 p)
+>>>>>What can we actually ask the human to do and hold them to task
+for? (3 p)
+---important to note that issues of litigation for full autonomy are
+not even part of the debate yet, we just aren't at the stage where it
+is worth discussing (2 p)
+
+--------------------
 
 Resisting Teleology / Conclusion (14 p)
 
@@ -16,6 +64,42 @@ ideologies flowing into these systems, the contingency of the plans
 media
 ---which form the visible picture as of today, for MOST people (1 p)
 >>> possibly split up <<<
+
+
+
+
+Conclusion:
+The pro-side: millions of deaths if we don't do something now, so we
+have to accept these
+The con-side: (regulator) current deaths not on my hands, but if one
+little girl is killed by a robot I've lost my job
+
+But the statistics are matters of faith. Nobody has the answer, they
+can just point to 90\% of accidents involving people. Computers can fix
+                     some, will cause other problems. I believe
+                     computers can do better than us, but it is still
+                     just guesses at future stats. So this is about
+                     stories and faith as much as math.
+
+Our choice shouldn't be to accept this driverless vision or take
+responsibility for the deaths of thousands. That's abusive, coercive,
+and deeply wrong. This isn't a question of whether fully automated
+cars come to exist, even as noe envisioned. I am not saying this dream
+is possible or impossible. But there are other choices to be made!
+
+The choice should be between options, between visions, choices of how
+we integrate computers to make our driving safer. The google model,
+this model, the other model, or innumerable newly imagined
+possibilities. NOT a take it or leave it; not the choice of the google
+car or a big fuck you to all the prospective road fatalities. That is
+no choice. There is more on heaven and earth than is dreamt of in this
+philosophy. The real question we need to ask is what form the tech
+should take, and what benefits and acceptable sacrifices adhere to
+that choice.
+
+
+
+EDIT THE BELOW
 
 2) wrap up with the big questions we are faced with, that we have to
 grapple with instead of accepting teleology/common media framings: (1
