--- a/intro.tex
+++ b/intro.tex
@@ -45,13 +45,20 @@ the popular press
 ---but this is a flawed picture of the future, and an incomplete
 picture of the tech
 
-3) and shift to the lead-in to the main thesis sections: that these
-technologies or visions of them enact certain ideologically charged
+3) and shift to the lead-in to the main thesis sections: 
+KEY QUESTIONS: What are the stories we are hearing vs. Other ones out
+there, why? and what are the stakes for these stories?
+
+these technologies or visions of them enact certain ideologically charged
 activities (through their epistemologies; or even to some extent
 ontological position of a self-driving car that ``knows'' nothing);
 and that these can be traced through the histories and current
-discourses of the fields involved, and lead us to expect very
+discourses of the fields involved, and might lead us to expect very
 different social/cultural impacts (2 p)
+
+**What can I disprove?
+I can disprove that this conventional story is right, true, and the
+only story to tell.**
 
 Note: I need more voices from actual modern driverless car research
 papers, though looking at the Dickmanns ones more is a good idea! need
