--- a/main.bib
+++ b/main.bib
@@ -164,7 +164,7 @@
 @INCOLLECTION{patricklin,
    author = "Patrick Lin",
    title = "{I}ntroduction",
-   editor = "Patrick Lin, Keith Abney, and George A. Bekey",
+   editor = "Patrick Lin and Keith Abney and George A. Bekey",
    booktitle = "{R}obot {E}thics: {T}he {E}thical and {S}ocial {I}mplications of {R}obotics",
    publisher = "MIT Press",
    address = "Cambridge, MA",
@@ -181,14 +181,13 @@
 
 @ARTICLE{riskinDuck,
    author = "Jessica Riskin",
-   title = {The Gnats and Gnus Document Preparation System},
-   journal = {\mbox{G-Animal's} Journal},
-   year = 1986,
-   volume = 41,
-   number = 7,
-   pages = "73+",
-   month = jul,
-   note = "This is a full ARTICLE entry",
+   title = "{T}he {D}efecating {D}uck, or, the {A}mbiguous {O}rigins of {A}rtificial {L}ife",
+   journal = "Critical Inquiry",
+   year = 2003,
+   volume = 29,
+   number = 4,
+   pages = "599--633",
+   month = "Summer",
 }
 
 @BOOK{richardhills,
@@ -229,7 +228,7 @@
 
 @TECHREPORT{dartmouthconf,
    key = "mccarthy",
-   author = "J. McCarthy, M. L. Minksy, N. Rochester, C. E. Shannon",
+   author = "J. McCarthy and M. L. Minksy and N. Rochester and C. E. Shannon",
    title = "{A} {P}roposal for the {D}artmouth {S}ummer {R}esearch {P}roject on {A}rtificial {I}ntelligence",
    institution = "From the Norbert Wiener Papers, MC 22. Box 31: Folder 798",
    year = "1955",
@@ -261,7 +260,7 @@
 }
 
 @ARTICLE{markoffImage,
-   author = "John Markoff,
+   author = "John Markoff",
    title = "{R}esearchers {A}nnounce {A}dvance in {I}mage-{R}ecognition {S}oftware",
    journal = "New York Times",
    month = "November 17",
@@ -276,7 +275,7 @@
    year = 2014,
 }
 
-@ARTICLE(jordanResponse,
+@ARTICLE{jordanResponse,
    author = "Michael Jordan",
    title = "{B}ig {D}ata, {H}ype, the {M}edia and {O}ther {P}rovocative {W}ords to {P}ut in a {T}itle",
    journal = "UC Berkeley AMPLab",
@@ -335,7 +334,7 @@
 }
 
 @TECHREPORT{predictPatent,
-   author = "Jiajun Zhu, David I. Ferguson, and Dmitri A. Dolgov",
+   author = "Jiajun Zhu and David I. Ferguson and Dmitri A. Dolgov",
    title = "System and method for predicting behaviors of detected objects",
    institution = "US Patent Application Publication",
    number = "2012/0083960 A1",
