--- a/chap3.tex
+++ b/chap3.tex
@@ -1,43 +1,44 @@
-\chapter{New Epistemologies}
+\chapter{Alternate Narratives}
 
-Impacts / New Epistemologies (21 p)
+Technological Realities (27 p)
 
->>>This is where I weave in automotive history 
->>>Return to streetcar and the re-shaping of public space: 
+4. What other stories are there?
+-HSC
+-real history of automation of work
+-other autonomy research
+--researchers in the field
+-some stakes (data) are still applicable, but others may be
+ameliorated
 
-1) process by which new technologies become entwined with new legal
-principles; new epistemologies?
--historical example (3 p)
--what is the new epistemology needed to make sense of devices like
-this in the everyday (because we haven't seen them outside of extreme
-environments, except in very weak forms)
--the street stands to be re-shaped again, subtly, by the capabilities
-of our vehicles (1 p)
--this is the place to bring together the AI, Human Factors,
-Law/Policy, and STS/Anthro background (specifically on technology \&
-people, edges of HCI, Andy Clark on natural-born cyborgs) to paint the
-whole picture of the forces in play (2 p, v. philosophical)
 
-2) VERY different potential impacts if we are looking at fully
-autonomous vs. partially autonomous 
---in terms of human role and our understanding of our own role
-----referring back to HF/SC (3 p)
---in terms of how the road itself may have to change (not going to
-spend a lot of time on this, but it is worth at least a couple
-paragraphs) (2 p)
---in terms of legal framework
-----it is important to note that ``responsibility'' is not binary
-(which is made clear in these examples), and torts may be distributed
-across human and nonhuman actors (operator, owner, seller,
-manufacturer, distributors) but distribution of torts has an ethical
-and ideological stance (2 p)
->>>>BUT: problems with the liability framework: expensive for the
-litigant to get expert witnesses; harder to determine whose fault it
-is and the human tends to get scapegoated (see industrial accidents,
-TMI, or oil rig disasters) (3 p)
->>>>>What can we actually ask the human to do and hold them to task
-for? (3 p)
----important to note that issues of litigation for full autonomy are
-not even part of the debate yet, we just aren't at the stage where it
-is worth discussing (2 p)
+\subsection{The Untold History of the Automation of Work}
+
+\subsection{Human Supervisory Control}
+
+\subsection{Lessons from Autonomy Research}
+
+\subsection{Whither Alternate Stories?}
+
+
+
+1) bring in the telerobotics/supervisory control literature
+-why supervisory control? and where is it used? (5 p)
+-examine the issue of deskilling vs. the ``irony of automation'' well
+known in Human Factors, in which increased automation actually
+increases human load (2 p)
+-but SC allows for particular combinations of human skills and machine
+competencies (1 p)
+--used all over industry, aviation, undersea (2 p)
+
+
+3) situate the moonshot approach (which may actually be easier in some
+senses but less socially acceptable) and the mixed approach in a way
+that does not support a teleology of autonomous vehicle development
+(think Sheridan's graph of telerobotics, not the SAE's 5 stages) (4 p)
+--in historical context of previous systems that are wholly or
+partially autonomous (4 p)
+
+
+
+
 
